--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /.vscode
 2015/v1-original.js
 /2015/2017-10-04-archive
+2015/EpicOS 4.txt
+2015/EpicOS 5.txt
+2015/EpicOS 6.txt
+2015/EpicOS v2 - Cleaned Up.js
+2015/EpicOS v2 - Original.js
+2015/EpicOS v2 - Rewritten.js
