--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 2015/EpicOS v2 - Cleaned Up.js
 2015/EpicOS v2 - Original.js
 2015/EpicOS v2 - Rewritten.js
+2015/2015 - EpicOS (Original UserScript)/messagequeue.js
+2015/2015 - EpicOS (Original UserScript)/2015 - EpicOS (original bad userscript version).js
