--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,11 @@
 /.vscode
 2015/v1-original.js
 /2015/2017-10-04-archive
-2015/EpicOS 4.txt
-2015/EpicOS 5.txt
-2015/EpicOS 6.txt
-2015/EpicOS v2 - Cleaned Up.js
-2015/EpicOS v2 - Original.js
-2015/EpicOS v2 - Rewritten.js
 2015/2015 - EpicOS (Original UserScript)/messagequeue.js
 2015/2015 - EpicOS (Original UserScript)/2015 - EpicOS (original bad userscript version).js
 /2023-12
+2015/v2-original.js
+2015/v2-rewritten.js
+2015/v4-original.js
+2015/v5-original.js
+2015/v6-original.js
