--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 2015/v6-original.js
 2017-epics-chat-bot/ecb-original.js
 extra/2017-epics-chat-bot/ecb-original.js
+extra/2017-epics-socket-bot/esb-original.js
