--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
 
 /.vscode
 2015/v1-original.js
-/2015/2017-10-04-archive
-2015/2015 - EpicOS (Original UserScript)/messagequeue.js
-2015/2015 - EpicOS (Original UserScript)/2015 - EpicOS (original bad userscript version).js
-/2023-12
 2015/v2-original.js
 2015/v2-rewritten.js
 2015/v4-original.js
 2015/v5-original.js
 2015/v6-original.js
-2017-epics-chat-bot/ecb-original.js
+/2015/2017-10-04-archive
+/2015/2015 - EpicOS (Original UserScript)
+/2023-12
 extras/2017-epics-chat-bot/ecb-original.js
 extras/2017-epics-socket-bot/esb-original.js
