Move EpicOS (v1) to its own directory.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ extras/2017-epics-chat-bot/ecb-original.js
 extras/2017-epics-socket-bot/esb-original.js
 /2023-12-original
 /extras/2018-nmpb-plus-plus-original
+2015/v1/original.js
