--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ extras/2017-epics-socket-bot/esb-original.js
 /2023-12-original
 /extras/2018-nmpb-plus-plus-original
 2015/v1/original.js
+/2023-11-27-node-js/2023-12-snapshot
+/2023-11-27-node-js
